--- a/.github/workflows/platex.yml
+++ b/.github/workflows/platex.yml
@@ -11,7 +11,9 @@ jobs:
     - uses: actions/checkout@v1
     - name: install-dependencies
       run: |
-        sudo apt-get install -y --no-install-recommends texlive-base latexmk
+        sudo apt-get install -y --no-install-recommends texlive-base texlive-lang-cjk
+        sudo apt-get install -y --no-install-recommends texlive-fonts-recommended texlive-fonts-extra
+        sudo apt-get install -y --no-install-recommends latexmk
     - name: compile
       run: |
         latexmk template.tex
