--- a/.github/workflows/platex.yml
+++ b/.github/workflows/platex.yml
@@ -12,6 +12,8 @@ jobs:
     - name: install-dependencies
       run: |
         sudo apt-get install -y --no-install-recommends texlive-base texlive-lang-japanese
+        sudo apt-get install -y --no-install-recommends texlive-latex-base texlive-latex-recommended texlive-latex-extra
+        sudo apt-get install -y --no-install-recommends texlive-font-utils texlive-generic-extra texlive-science
         sudo apt-get install -y --no-install-recommends texlive-fonts-recommended
         sudo apt-get install -y --no-install-recommends latexmk
     - name: compile
